Closed
Bug 784179
Opened 13 years ago
Closed 13 years ago
[b2g-bluetooth] Wrong thread assertion in GetPairedDevicePropertiesInternal
Categories
(Core :: DOM: Device Interfaces, defect)
Tracking
()
RESOLVED
FIXED
mozilla17
People
(Reporter: qdot, Assigned: qdot)
References
Details
Attachments
(1 file)
1.19 KB,
patch
|
gwagner
:
review+
|
Details | Diff | Splinter Review |
GetPairedDevicePropertiesInternal asserts that it shouldn't be on the main thread, which is the opposite of what it should be, meaning things crash whenever we're in debug and try to get paired device properties.
Assignee | ||
Comment 1•13 years ago
|
||
Attachment #653544 -
Flags: review?(anygregor)
Updated•13 years ago
|
Attachment #653544 -
Flags: review?(anygregor) → review+
Assignee | ||
Comment 2•13 years ago
|
||
Target Milestone: --- → mozilla17
![]() |
||
Comment 3•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•