Bug 784179: Wrong thread assertion in GetPairedDevicePropertiesInternal; r=gwagner